<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LibraryActivity"
    tools:ignore="AlwaysShowAction">
    <item
        android:id="@+id/sort_title"
        android:title="@string/sort_title" />
    <item
        android:id="@+id/sort_artist"
        android:title="@string/sort_artist" />
    <item
        android:id="@+id/sort_pages"
        android:title="@string/sort_pages" />
    <item
        android:id="@+id/sort_dl_date"
        android:title="@string/sort_dl_date" />
    <item
        android:id="@+id/sort_read_date"
        android:title="@string/sort_read_date" />
    <item
        android:id="@+id/sort_reads"
        android:title="@string/sort_reads" />
    <item
        android:id="@+id/sort_size"
        android:title="@string/sort_size" />
    <item
        android:id="@+id/sort_reading_progress"
        android:title="@string/sort_reading_progress" />
    <item
        android:id="@+id/sort_custom"
        android:title="@string/sort_custom"
        android:visible="false" />
    <item
        android:id="@+id/sort_random"
        android:title="@string/sort_random" />
</menu>
