<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.ReaderActivity">
    <item
        android:id="@+id/action_slideshow"
        android:enabled="true"
        android:icon="@drawable/ic_slideshow"
        android:title="@string/viewer_slideshow"
        android:tooltipText="@string/viewer_slideshow_help"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete_book"
        android:enabled="true"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/viewer_delete_book"
        android:tooltipText="@string/viewer_delete_book"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_show_favorite_pages"
        android:icon="@drawable/ic_filter_fav_off"
        android:title="@string/viewer_filter_favourite_off"
        android:tooltipText="@string/viewer_filter_favourite_help"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_shuffle"
        android:enabled="true"
        android:icon="@drawable/ic_menu_sort_random"
        android:title="@string/viewer_order_shuffle"
        android:tooltipText="@string/viewer_order_shuffle_help"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_reverse"
        android:enabled="true"
        android:icon="@drawable/ic_reverse"
        android:title="@string/viewer_order_reverse"
        android:tooltipText="@string/viewer_order_reverse"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_book_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/book_settings"
        android:tooltipText="@string/book_settings"
        app:showAsAction="ifRoom" />
</menu>