<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LibraryActivity"
    tools:ignore="AlwaysShowAction"
    tools:targetApi="o">
    <item
        android:id="@+id/action_select_queue_top"
        android:icon="@drawable/ic_action_top"
        android:title="@string/move_top"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_select_queue_bottom"
        android:icon="@drawable/ic_action_bottom"
        android:title="@string/move_bottom"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_download_scratch"
        android:icon="@drawable/ic_action_download_scratch"
        android:title="@string/menu_redownload_scratch"
        android:tooltipText="@string/menu_redownload_scratch"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_change_mode"
        android:icon="@drawable/ic_action_download_stream"
        android:title="@string/menu_change_dl_mode"
        android:tooltipText="@string/menu_change_dl_mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_freeze"
        android:icon="@drawable/ic_action_freeze_toggle"
        android:title="@string/freeze"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_select_queue_cancel"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/cancel"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_action_select_all"
        android:title="@string/menu_select_all"
        android:tooltipText="@string/menu_select_all"
        app:showAsAction="ifRoom" />
</menu>
