<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.ReaderActivity"
    tools:ignore="AlwaysShowAction"
    tools:targetApi="o">
    <item
        android:id="@+id/action_show_favorite_pages"
        android:icon="@drawable/ic_filter_fav_off"
        android:title="@string/menu_fav"
        android:tooltipText="@string/menu_fav"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit_chapters"
        android:icon="@drawable/ic_chapter"
        android:title="@string/menu_edit_chapters"
        android:tooltipText="@string/menu_edit_chapters"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add_remove_chapters"
        android:icon="@drawable/ic_edit"
        android:title="@string/gallery_add_remove_chapters"
        android:tooltipText="@string/gallery_add_remove_chapters"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_remove_chapters"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/gallery_clear_chapters"
        android:tooltipText="@string/gallery_clear_chapters"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit_confirm"
        android:icon="@drawable/ic_checked"
        android:title="@string/menu_edit_confirm"
        android:tooltipText="@string/menu_edit_confirm"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit_cancel"
        android:icon="@drawable/ic_close"
        android:title="@string/menu_edit_cancel"
        android:tooltipText="@string/menu_edit_cancel"
        android:visible="false"
        app:showAsAction="always" />
</menu>
