<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.QueueActivity">
    <item
        android:id="@+id/action_error_stats"
        android:title="@string/err_stats_title"
        android:icon="@drawable/ic_error_outline"
        android:visible="false"
        tools:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_invert_queue"
        android:title="@string/invert_queue"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cancel_all"
        android:title="@string/cancel_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_redownload_all"
        android:title="@string/redownload_all"
        app:showAsAction="never" />
</menu>
