<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.ReaderActivity"
    tools:ignore="AlwaysShowAction"
    tools:targetApi="o">
    <item
        android:id="@+id/action_toggle_favorite_pages"
        android:icon="@drawable/ic_fav_toggle"
        android:title="@string/menu_mark_fav"
        android:tooltipText="@string/menu_mark_fav"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_set_group_cover"
        android:icon="@drawable/ic_action_make_cover"
        android:title="@string/viewer_make_cover"
        android:tooltipText="@string/viewer_make_cover"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit_chapter_name"
        android:icon="@drawable/ic_edit"
        android:title="@string/gallery_edit_name"
        android:tooltipText="@string/gallery_edit_name"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/menu_delete_single"
        android:tooltipText="@string/menu_delete_single"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_action_select_all"
        android:title="@string/menu_select_all"
        android:tooltipText="@string/menu_select_all"
        app:showAsAction="ifRoom" />
</menu>
