<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LibraryActivity"
    tools:ignore="AlwaysShowAction"
    tools:targetApi="o">
    <item
        android:id="@+id/action_queue_delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/menu_delete_single"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_download"
        android:icon="@drawable/ic_action_download"
        android:title="@string/menu_redownload"
        android:tooltipText="@string/menu_redownload"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_download_scratch"
        android:icon="@drawable/ic_action_download_scratch"
        android:title="@string/menu_redownload_scratch"
        android:tooltipText="@string/menu_redownload_scratch"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_action_select_all"
        android:title="@string/menu_select_all"
        android:tooltipText="@string/menu_select_all"
        app:showAsAction="ifRoom" />
</menu>
