<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.ImageViewerActivity">
    <item
        android:id="@+id/action_slideshow"
        android:enabled="true"
        android:icon="@drawable/ic_slideshow"
        android:title="@string/viewer_slideshow"
        android:tooltipText="Enable slideshow mode"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_page_menu"
        android:enabled="true"
        android:icon="@drawable/ic_image"
        android:title="@string/viewer_page_menu"
        android:tooltipText="Show current page properties"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete_book"
        android:enabled="true"
        android:icon="@drawable/ic_action_delete_forever"
        android:title="@string/viewer_delete_book"
        android:tooltipText="Delete current book"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_show_favorite_pages"
        android:icon="@drawable/ic_filter_favs_off"
        android:title="@string/viewer_filter_favourite_off"
        android:tooltipText="Toggle display of favourite pages"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_shuffle"
        android:enabled="true"
        android:icon="@drawable/ic_menu_sort_random"
        android:title="@string/viewer_order_shuffle"
        android:tooltipText="Toggle shuffling of pages"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/open_settings"
        android:tooltipText="Open image viewer settings"
        app:showAsAction="ifRoom" />
</menu>