<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LibraryActivity"
    tools:ignore="AlwaysShowAction">
    <item
        android:id="@+id/action_edit_confirm"
        android:icon="@drawable/ic_checked"
        android:title="@string/menu_edit_confirm"
        android:tooltipText="@string/menu_edit_confirm"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit_cancel"
        android:icon="@drawable/ic_close"
        android:title="@string/menu_edit_cancel"
        android:tooltipText="@string/menu_edit_cancel"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/remove_all"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/meta_remove_all_tags"
        android:tooltipText="@string/meta_remove_all_tags"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_help_outline"
        android:title="@string/help_generic"
        android:tooltipText="@string/help_generic"
        app:showAsAction="ifRoom" />
</menu>
